# LLMTokenStreamQuantEngine

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  config.yaml
.github/workflows/: ci.yml
include/: CMakeLists.txt  Config.h  Deduplicator.h  FixOmsAdapter.h  LLMAdapter.h  LLMStreamClient.h  LatencyController.h  MetricsLogger.h  MockOmsAdapter.h  OmsAdapter.h  OutputSink.h  OutputSinkImpl.h  RestOmsAdapter.h  RiskManager.h  TokenStreamSimulator.h  TradeSignalEngine.h  config.yaml
src/: Config.cpp  Deduplicator.cpp  FixOmsAdapter.cpp  LLMAdapter.cpp  LLMStreamClient.cpp  LatencyController.cpp  MetricsLogger.cpp  MockOmsAdapter.cpp  RestOmsAdapter.cpp  RiskManager.cpp  Timer.cpp  TokenStreamSimulator.cpp  TradeSignalEngine.cpp  main.cpp
tests/: CMakeLists.txt
tests/integration/: test_chaos.cpp  test_oms_pipeline.cpp  test_pipeline.cpp
tests/performance/: bench_hot_path.cpp
tests/unit/: test_config.cpp  test_deduplicator.cpp  test_invariants.cpp  test_latency_controller.cpp  test_llm_adapter.cpp  test_llm_stream_client.cpp  test_metrics_logger.cpp  test_oms_adapter.cpp  test_output_sink.cpp  test_risk_manager.cpp  test_token_stream_simulator.cpp  test_trade_signal_engine.cpp
